// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageContainer components snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-1 {
  font-family: medium-content-title-font,Georgia,Cambria,"Times New Roman",Times,serif;
  line-height: 1.25;
  font-weight: 600;
  font-size: 42px;
  margin-top: 32px;
  margin-bottom: 32px;
}

<div
    class="emotion-0"
  >
    <h1
      class="emotion-1"
    >
      MDX Story
    </h1>
  </div>
</DocumentFragment>
`;

exports[`PageContainer overview snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-1 {
  font-family: medium-content-title-font,Georgia,Cambria,"Times New Roman",Times,serif;
  line-height: 1.25;
  font-weight: 600;
  font-size: 42px;
  margin-top: 32px;
  margin-bottom: 32px;
}

<div
    class="emotion-0"
  >
    <h1
      class="emotion-1"
    >
      Story
    </h1>
  </div>
</DocumentFragment>
`;
